--- a/frontend/start/package.json
+++ b/frontend/start/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "next": "14.2.6",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^15.0.0-rc.0",
+    "react": "^19.0.0-rc-e56f4ae3-20240830",
+    "react-dom": "^19.0.0-rc-e56f4ae3-20240830"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.6",
+    "eslint-config-next": "^15.0.0-rc.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
