--- a/frontend/start/package.json
+++ b/frontend/start/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0-rc-e56f4ae3-20240830",
     "react-dom": "^19.0.0-rc-e56f4ae3-20240830",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
