--- a/frontend/start/package.json
+++ b/frontend/start/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.7",
     "next": "^15.0.0-rc.0",
+    "query-string": "^9.1.1",
     "react": "^19.0.0-rc-e56f4ae3-20240830",
     "react-dom": "^19.0.0-rc-e56f4ae3-20240830",
     "react-hook-form": "^7.53.0",
