--- a/frontend/start/package.json
+++ b/frontend/start/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
+    "@tanstack/react-query": "^5.61.0",
+    "@tanstack/react-query-devtools": "^5.61.0",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "next": "^15.0.0-rc.0",
